--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Buscador de películas</h1>
     <input type="text" id="searchInput" placeholder="Ingrese el título de la película">
     <button id="searchButton">Buscar</button>
-    <div id="results">Hola</div>
+    <div id="results"></div>
   </div>
 
   <script src="script.js"></script>
