--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
@@ -14,6 +14,7 @@
     <h1>Buscador de películas</h1>
     <input type="text" id="searchInput" placeholder="Ingrese el título de la película">
     <button id="searchButton">Buscar</button>
+
     <div id="results"></div>
   </div>
 
